--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://getahund53:6XQFsJIOFD71by83@cluster0.iywmvar.mongodb.net/
+MONGODB_URI=mongodb+srv://getahund53:6XQFsJIOFD71by83@cluster0.iywmvar.mongodb.net/todosdb
 PORT=5000
